# mlb_betting

./: .coverage  .cursorignore  .dockerignore  .env  .env.example  .env.ml_template  .env.production.template  .env.quickstart  .env.staging.template  .gitignore  ACTION_NETWORK_COMPLETE_GUIDE.md  ANALYSIS_SCRIPTS_CONSOLIDATION.md  ARCHITECTURAL_ASSESSMENT_DATA_ARCHITECT.md  AUTOMATIC_FLIP_DETECTION_INTEGRATION.md  CLAUDE.md  CLI_USAGE_GUIDE.md  DAILY_STRATEGY_VALIDATION_README.md  DAILY_UPDATER_README.md  DATABASE_TABLES_DOCUMENTATION.md  DEPRECATION_MIGRATION_PLAN.md  DETECTOR_MIGRATION_SUMMARY.md  DUCKDB_CLEANUP_SUMMARY.md  DUCKDB_OPTIMIZATION_SUMMARY.md  FACTORY_BACKTESTING_INTEGRATION_SUMMARY.md  ML_GETTING_STARTED.md  Makefile  PHASE_2_COMPLETION_SUMMARY.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_3_ORCHESTRATOR_SOLUTION.md  PHASE_4_COMPLETION_SUMMARY.md  PREGAME_WORKFLOW_README.md  PROCESSOR_FIXES_SUMMARY.md  PROCESSOR_TEST_RESULTS.md  QUICK_START.md  README.md  REAL_HISTORICAL_BACKTESTING_IMPLEMENTATION.md  RECOMMENDATION_LEVEL_DEDUPLICATION_FIX.md  RECOMMENDATION_SYSTEM_FIXES_SUMMARY.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  (+85 more)
action/: README.md  __init__.py  extract_all_team_data.py  extract_todays_game_urls.py
analysis_scripts/: README.md  STRATEGY_BUSINESS_RULES.md  adaptive_master_detector_simple.py  book_conflicts_strategy.sql  book_conflicts_strategy_postgres.sql  cleanup_duckdb_references.py  consensus_heavy_strategy.sql  consensus_moneyline_strategy.sql  consensus_moneyline_strategy_postgres.sql  consensus_signals_current.sql  consensus_signals_current_postgres.sql  demo_betting_finder.py  enhanced_late_sharp_flip_strategy_backtest.py  enhanced_late_sharp_flip_strategy_postgres.sql  executive_summary_report.sql  executive_summary_report_postgres.sql  final_working_backtest.py  hybrid_line_sharp_strategy.sql  hybrid_line_sharp_strategy_postgres.sql  late_sharp_flip_strategy_postgres.sql  line_movement_strategy.sql  line_movement_strategy_postgres.sql  master_betting_detector.py  mixed_consensus_strategy.sql  opposing_markets_detector.py  opposing_markets_strategy.sql  opposing_markets_strategy_postgres.sql  phase1_database_consolidation.py  public_money_fade_strategy.sql  public_money_fade_strategy_postgres.sql  refactored_master_betting_detector.py  run_phase1_strategies.py  run_phase1_strategies.sh  sharp_action_detector.sql  sharp_action_detector_postgres.sql  signal_combinations.sql  signal_combinations_postgres.sql  simple_flip_backtest.py  strategy_bet_history.py  strategy_bet_recreation.py  (+18 more)
config/: __init__.py  backtesting_config.json  settings.py
current_season_test_output/: current_season_summary_20250709_002257.txt  current_season_summary_20250711_132905.txt  current_season_summary_20250711_134237.txt  current_season_summary_20250711_134356.txt  current_season_summary_20250711_134744.txt
data/: odds_api_usage.json
docker/: README.md
docs/: ACTION_NETWORK_BET_MONEY_INTEGRATION_DESIGN.md  ACTION_NETWORK_DATABASE_SOLUTION.md  ACTION_NETWORK_GAMES_IMPROVEMENT.md  ADVANCED_RELIABILITY_IMPLEMENTATION_PLAN.md  AI_OPPORTUNITY_DETECTION_SYSTEM.md  API_QUICK_REFERENCE.md  ARCHITECTURE_CLEANUP_SUMMARY.md  ARCHITECTURE_CONSOLIDATION_SUMMARY.md  AUTH_SECURITY_IMPROVEMENTS.md  AUTOMATED_RETRAINING_GUIDE.md  BETTING_LINES_DATA_QUALITY_ASSESSMENT.md  BETTING_LINES_DATA_QUALITY_IMPLEMENTATION_SUMMARY.md  CENTRALIZED_REGISTRY_SYSTEM.md  CLI_COMMAND_TESTING_REPORT.md  CLI_FIXES_IMPLEMENTATION_PLAN.md  CLI_QUICK_REFERENCE.md  CLI_TROUBLESHOOTING_REPORT.md  COLLECTION_HEALTH_MONITORING_ASSESSMENT.md  COLLECTION_HEALTH_MONITORING_IMPLEMENTATION_SUMMARY.md  COLLECTOR_CLEANUP_IMPROVEMENTS.md  COMPLETE_DATA_COLLECTION_AND_STRATEGY_TESTING_GUIDE.md  COMPREHENSIVE_TEST_REPORT.md  CORE_BETTING_DECOMMISSION_DESIGN.md  DATABASE_CONFIGURATION.md  DATABASE_PERFORMANCE_OPTIMIZATION_SUMMARY.md  DATABASE_SCHEMA_ANALYSIS_FINAL.md  DATABASE_SCHEMA_REFERENCE.md  DATA_COLLECTION_REFACTORING_SUMMARY.md  DATA_COLLECTOR_HEALTH_MONITORING_DESIGN.md  DATA_GAP_ANALYSIS.md  DATA_MODEL.md  DATA_MODEL_IMPROVEMENTS.md  DEPLOY_DATA_QUALITY.md  DEVELOPER_MIGRATION_GUIDE.md  ENHANCED_DASHBOARD_INTERFACE.md  FULL_PIPELINE_EXECUTION_REPORT.md  GAME_OUTCOME_INTEGRATION.md  HEALTH_CHECK_SECURITY_GUIDE.md  HEALTH_CHECK_TROUBLESHOOTING_GUIDE.md  HEALTH_MONITORING_IMPLEMENTATION_SUMMARY.md  (+77 more)
examples/: complete_workflow_demonstration.py  pipeline_usage_examples.py  python_classes.py  refactored_backtesting_demo.py  rlm_backtesting_demo.py  test_betting_tables_with_teams.py
input/: raw_data.txt  raw_data_sampled.txt
scripts/: analyze_sharp_success.py  backup-system.sh  check_scheduler.sh  config_demo.py  deploy-production.sh  detect_sharp_action.py  docker-helper.sh  docker-recovery.sh  fetch_current_lines.py  generate_secure_passwords.sh  manual_triggers.sh  migrate_to_long_format.py  parse_and_save_betting_splits.py  parse_betting_splits.py  production-setup.sh  save_split_to_duckdb.py  schedule_daily_updates.sh  simple_sharp_detection.py  start_pregame_scheduler.sh  stop_pregame_scheduler.sh  test-docker-stack.sh  update_game_results.py  vsin_parser.py  vsin_scraper.py
sportsbookreview/: __init__.py  demo.py  tree4.txt
sql/: action_network_betting_tables.sql  action_network_history_schema.sql  action_schema.sql  add_game_info_to_betting_tables.sql  add_team_datetime_to_betting_tables.sql  backtesting_schema.sql  backtesting_schema.sql.bak  cleanup_test_data.sql  consolidated_schema.sql  enhanced_backtesting_schema.sql  final_schema_cleanup.sql  final_validation_suite.sql  manual_strategy_evaluation_queries.sql  manual_strategy_evaluation_queries.sql.bak  migrate_action_network_data.sql  migrate_splits_data.sql  migrate_strategy_data.sql  migrate_strategy_data_corrected.sql  performance_optimization.sql  performance_testing.sql  phase2b_completion.sql  phase2b_continuation.sql  phase2b_final_fix.sql  phase2b_fix_game_outcomes.sql  phase2b_historical_data_migration.sql  phase4a_schema_extension.sql  phase4b_data_migration.sql  phase4b_data_migration_corrected.sql  schema.sql  schema.sql.bak  (+16 more)
(+1006 files in other folders)
